# trove

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  enrich.py  extract.py  feedfetch.py  lens.py  main.py  routes.py  store.py  topics.py  urls.py  worker.py
backend/tests/: conftest.py  test_bookmarks.py  test_collections.py  test_enrich.py  test_extract.py  test_feed_routes.py  test_feedfetch.py  test_feeds.py  test_highlights.py  test_lens.py  test_routes.py  test_store.py  test_topics.py  test_urls.py  test_worker.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  highlights.ts  render.ts  styles.css  types.ts
frontend/src/components/: AddFeed.tsx  BookmarksList.tsx  Capture.tsx  CollectionPicker.tsx  HighlightsList.tsx  LensBar.tsx  List.tsx  Nav.tsx  Reader.tsx
frontend/src/test/: App.test.tsx  BookmarksList.test.tsx  Capture.test.tsx  List.test.tsx  Nav.test.tsx  Reader.test.tsx  factory.ts  highlights.test.ts
